--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
         username: ${{ secrets.user }}
         password: ${{ secrets.pass }}
         script: |
-          composer install
+          pwd
