--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,9 @@ jobs:
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@master
       with:
-        host: ftp.cartaosaudeprevencao.com.br
-        username: cartaosaudeprevencao
-        password: cap2020
+        host: "ftp.cartaosaudeprevencao.com.br"
+        username: "cartaosaudeprevencao"
+        password: "cap2020"
         port: 21
         script: |
           ls
