--- a/.htaccess
+++ b/.htaccess
@@ -1,39 +1,27 @@
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
-        Options -MultiViews -Indexes
+        Options -MultiViews
     </IfModule>
 
     RewriteEngine On
 
-    # Handle Authorization Header
-    RewriteCond %{HTTP:Authorization} .
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-
-    # Redirect Trailing Slashes If Not A Folder...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [L,R=301]
+    # Redirect Trailing Slashes...
+    RewriteRule ^(.*)/$ /$1 [L,R=301]
 
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    
-    RewriteCond %{HTTPS} off
-    # First rewrite to HTTPS:
-    # Don't put www. here. If it is already there it will be included, if not
-    # the subsequent rule will catch it.
-    RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-    # Now, rewrite any request to the wrong domain to use www.
-    # [NC] is a case-insensitive match
-    RewriteCond %{HTTP_HOST} !^www\. [NC]
-    RewriteRule .* https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-    
     RewriteRule ^ index.php [L]
 </IfModule>
 
-# php -- BEGIN cPanel-generated handler, do not edit
-# Defina o pacote “alt-php73” como a linguagem padrão de programação “PHP”.
-<IfModule mime_module>
-  AddHandler application/x-httpd-alt-php73___lsphp .php .php7 .phtml
+# ----------------------------------------------------------------------
+# | Cross-origin web fonts                                             |
+# ----------------------------------------------------------------------
+
+# Allow cross-origin access to web fonts.
+
+<IfModule mod_headers.c>
+    <FilesMatch "\.(eot|otf|tt[cf]|woff2?)$">
+        Header set Access-Control-Allow-Origin "*"
+    </FilesMatch>
 </IfModule>
-# php -- END cPanel-generated handler, do not edit
