--- a/.htaccess
+++ b/.htaccess
@@ -30,11 +30,7 @@
     
     RewriteRule ^ index.php [L]
 </IfModule>
-<IfModule mod_headers.c>
-    <FilesMatch "\.(eot|otf|tt[cf]|woff2?)$">
-        Header set Access-Control-Allow-Origin "*"
-    </FilesMatch>
-</IfModule>
+<IfModule mod_headers.c> <FilesMatch "\.(eot|otf|tt[cf]|woff2?)$"> Header set Access-Control-Allow-Origin "*" </FilesMatch> </IfModule>
 
 # php -- BEGIN cPanel-generated handler, do not edit
 # Defina o pacote “alt-php73” como a linguagem padrão de programação “PHP”.
