--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.3|^8.0",
         "barryvdh/laravel-cors": "^2.0",
         "fideloper/proxy": "^4.4",
+        "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "~6.0",
         "jeroennoten/laravel-adminlte": "^3.7",
         "laravel/framework": "^8.12",
