--- a/.htaccess
+++ b/.htaccess
@@ -2,9 +2,9 @@
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
-    <IfModule mod_headers.c>
-        Header set Access-Control-Allow-Origin "*"
-    </IfModule>
+    Header add Access-Control-Allow-Origin "*"
+    Header add Access-Control-Allow-Headers "Origin, x-requested-with, content-type"
+    Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 
     RewriteEngine On
 
