--- a/.htaccess
+++ b/.htaccess
@@ -2,12 +2,13 @@
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
-    Header add Access-Control-Allow-Origin "*"
-    Header add Access-Control-Allow-Headers "Origin, x-requested-with, content-type"
-    Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 
     RewriteEngine On
-
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^ /index.php [QSA,L]
+    Header set Access-Control-Allow-Origin "*"
+    Header set Access-Control-Allow-Methods: "GET,POST,OPTIONS,DELETE,PUT"
+    
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
