--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,11 @@
     </IfModule>
 
     RewriteEngine On
-
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^ /index.php [QSA,L]
+    Header set Access-Control-Allow-Origin "*"
+    Header set Access-Control-Allow-Methods: "GET,POST,OPTIONS,DELETE,PUT"
+    
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
